2007-02-07  Richard B. Kreckel  <kreckel@ginac.de>

	* include/cln/integer.h: Enable modifying operators by default.
	* include/cln/rational.h: Likewise.
	* include/cln/sfloat.h: Likewise.
	* include/cln/ffloat.h: Likewise.
	* include/cln/dfloat.h: Likewise.
	* include/cln/lfloat.h: Likewise.
	* include/cln/float.h: Likewise.
	* include/cln/real.h: Likewise.
	* include/cln/complex.h: Likewise.
	* doc/cln.texi: Document that.

2007-02-06  Richard B. Kreckel  <kreckel@ginac.de>

	Fix crash in output of huge numbers:
	* src/integer/conv/cl_I_to_digits.cc: Make erglen uintC.
	* src/integer/output/cl_I_print_string.cc: Make B_baselen uintC.

2007-02-04  Richard B. Kreckel  <kreckel@ginac.de>

	Fix cl_F output of more than 2^32 decimal digits:
	* src/base/string/cl_sstring.cc (cl_sstring): make len uintC.
	* src/base/string/cl_sstring.h: Likewise.

2007-01-23  Bruno Haible  <bruno@clisp.org>

	Allow 64-bit builds on MacOS X 10.5.
	* m4/general.m4 (CL_CANONICAL_HOST_CPU): Test for x86_64 CPU if
	"uname -m" returns "i386".
	Reported by Ron Garret <ron@flownet.com>.

2007-01-20  Bruno Haible  <bruno@clisp.org>

	Avoid some gcc warnings.
	* autoconf/floatparam.c (flipped_double): Use a union instead of a
	type-punning cast.
	* include/cln/number.h (union ffloatjanus, union dfloatjanus): Remove
	declarations.
	(cl_float_to_FF_pointer, cl_double_to_DF_pointer): Change argument
	type.
	(CL_DEFINE_FLOAT_CONSTRUCTOR, CL_DEFINE_DOUBLE_CONSTRUCTOR): Update.
	* src/float/ffloat/cl_FF.h (cl_float_to_FF_pointer): Change argument
	type.
	(cl_float_to_FF): Remove function.
	* src/float/ffloat/conv/cl_FF_from_float.cc (FAST_FLOAT): Define.
	(cl_float_to_FF_pointer): Change argument type.
	* src/float/dfloat/cl_DF.h (cl_double_to_DF_pointer): Change argument
	type.
	(cl_double_to_DF): Remove function.
	* src/float/dfloat/conv/cl_DF_from_double.cc (FAST_DOUBLE): Define.
	(cl_double_to_DF_pointer): Change argument type.